src/test/resources/de/monticore/umlcd4a/cocos/mcg/valid/CD4AC2005.cd
package de.monticore.umlcd4a.cocos.mcg.valid;

classdiagram CD4AC2005 {
  public enum A;
  enum B;
}
