src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/CD4AC2005.cd
package de.monticore.umlcd4a.cocos.mcg.invalid;

classdiagram CD4AC2005 {
  abstract enum A;
  derived enum B;
  / enum C;
  final enum D;
  private enum E;
  protected enum F;
  static enum G;
}
